--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,4 +49,19 @@ nav ul li a:hover {
 .nav {
   position: static; }
 
+#container {
+  position: static;
+  width: 100%;
+  background-color: red; }
+
+#pie {
+  position: static;
+  background-color: black;
+  width: 100%;
+  height: 200px; }
+  #pie #desarrollo p {
+    text-align: center;
+    color: white;
+    font-size: 20px; }
+
 /*# sourceMappingURL=main.css.map */
