--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -89,11 +89,67 @@ nav{
 
 
 
-.container{
+#container{
+  
+  position:static;
+  width:100%;
+  background:{
+    color: red;
+  };
+  
+  #izquierda{
+    
+    #titulo{
+      
+    }
+    
+    #ayuda{
+      #arriba{
+      
+      }
+      #izqui{
+      
+      }
+      #dere{
+      
+      }
+    }
+  }
+  
+  
+  #derecha{
+    #tabla{
+      
+    }
+    
+    #final{
+      
+    }
+  }
+  
+  
   
 }
 
 
-.pie{
+#pie{
   
+  position: static;
+  background: {
+    color:black;
+  }
+  width:100%;
+  height:200px;
+  
+  #desarrollo{
+     p{
+      text-align:center;
+      color: white;
+      font:{
+      size: 20px;
+     
+    };
+  }
+  }
+ 
 }
