--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -52,16 +52,16 @@ nav ul li a:hover {
 #container {
   position: static;
   width: 100%;
-  background-color: red; }
+  background-color: #A9F5F2; }
 
 #pie {
   position: static;
-  background-color: black;
+  background-color: white;
   width: 100%;
   height: 200px; }
   #pie #desarrollo p {
     text-align: center;
-    color: white;
+    color: black;
     font-size: 20px; }
 
 /*# sourceMappingURL=main.css.map */
