--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -94,7 +94,7 @@ nav{
   position:static;
   width:100%;
   background:{
-    color: red;
+    color: #A9F5F2;
   };
   
   #izquierda{
@@ -136,7 +136,7 @@ nav{
   
   position: static;
   background: {
-    color:black;
+    color:white;
   }
   width:100%;
   height:200px;
@@ -144,7 +144,7 @@ nav{
   #desarrollo{
      p{
       text-align:center;
-      color: white;
+      color: black;
       font:{
       size: 20px;
      
