--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,63 +3,121 @@
   padding: 0; }
 
 body {
+  height: 100%;
   background-color: white;
   font-family: Arial, sans-serif;
-  font-size: 100;
-  font-weight: normal; }
+  font-size: 100; }
 
-nav ul {
-  list-style: none;
-  background-color: black; }
-nav > ul {
-  position: relative;
-  display: table;
-  width: 100%; }
-nav > ul li {
-  display: table-cell; }
-nav > ul > li:hover > ul {
-  display: block;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px; }
-nav ul li ul {
-  display: block;
-  position: absolute;
-  background: black;
-  width: auto; }
-nav ul li #paginas li {
-  width: auto; }
-nav ul li #repos li {
-  width: auto; }
-nav > ul > li > ul {
-  display: none; }
-nav > ul li a {
-  color: white;
-  display: block;
-  line-height: 25px;
-  padding: 12.5px;
-  position: relative;
-  text-align: center;
-  text-decoration: none; }
-nav ul li a:hover {
-  background: white;
-  color: black;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px; }
+nav {
+  height: 7.5%; }
+  nav ul {
+    list-style: none;
+    background-color: #303030; }
+  nav > ul {
+    position: relative;
+    display: table;
+    width: 100%; }
+  nav > ul li {
+    display: table-cell; }
+  nav > ul > li:hover > ul {
+    display: block;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px; }
+  nav ul li ul {
+    display: block;
+    position: absolute;
+    background: #303030;
+    width: auto; }
+  nav ul li #paginas li {
+    width: auto; }
+  nav ul li #repos li {
+    width: auto; }
+  nav > ul > li > ul {
+    display: none; }
+  nav > ul li a {
+    color: white;
+    display: block;
+    line-height: 25px;
+    padding: 12.5px;
+    position: relative;
+    text-align: center;
+    text-decoration: none; }
+  nav ul li a:hover {
+    background: white;
+    color: #303030;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px; }
 
 .nav {
   position: static; }
 
 #container {
+  background-repeat: no-repeat;
   position: static;
   width: 100%;
-  background-color: #A9F5F2; }
+  height: 75%;
+  background-color: #D8D589; }
+  #container h1 {
+    font-size: 40px;
+    color: black; }
+  #container #izquierda {
+    width: 50%;
+    float: left; }
+    #container #izquierda #titulo {
+      margin-top: 100px; }
+    #container #izquierda #ayuda #arriba {
+      margin-left: 10px;
+      margin-bottom: 10%;
+      text-align: center; }
+    #container #izquierda #ayuda #izqui {
+      float: left;
+      margin-left: 25%; }
+      #container #izquierda #ayuda #izqui p {
+        color: #337C11; }
+      #container #izquierda #ayuda #izqui p:hover {
+        color: #47D620; }
+    #container #izquierda #ayuda #dere {
+      margin-left: 10%;
+      float: left; }
+      #container #izquierda #ayuda #dere p {
+        color: #B90C0C; }
+      #container #izquierda #ayuda #dere p:hover {
+        color: #FF0000; }
+  #container #derecha {
+    width: 50%;
+    float: left; }
+    #container #derecha #tabla {
+      margin-left: 10%;
+      margin-top: 100px; }
+      #container #derecha #tabla table {
+        border: none; }
+      #container #derecha #tabla th {
+        color: black;
+        font-size: 20px;
+        text-align: center;
+        background-color: #7C797C; }
+    #container #derecha #final {
+      margin-left: 10%; }
+      #container #derecha #final button {
+        width: 150px; }
+      #container #derecha #final button:hover {
+        background-color: #7C797C;
+        color: white; }
+      #container #derecha #final #finaltable:hover td {
+        background-color: #63C5AF; }
+      #container #derecha #final #result {
+        border-color: black; }
+      #container #derecha #final tr.error {
+        background-color: #C71F1F; }
 
 #pie {
   position: static;
-  background-color: white;
+  background-color: #9D866C;
   width: 100%;
-  height: 200px; }
+  height: 17.5%;
+  float: left; }
   #pie #desarrollo p {
+    margin-top: 1%;
     text-align: center;
     color: black;
     font-size: 20px; }
