--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,13 +6,13 @@
 
 //este es el cuerpo
 body {
+  height:100%;
   background:{
      color:white; 
   }
   font: {
     family: Arial, sans-serif;
     size: 100;
-    weight: normal;
   }
 }
 
@@ -21,10 +21,10 @@ body {
 //esta es la barra de menu
 
 nav{
-  
+  height: 7.5%;
   ul {
       list-style: none;
-      background-color: black;
+      background-color: #303030;
   }
   >ul{
      position: relative;
@@ -38,14 +38,14 @@ nav{
  
   > ul > li:hover > ul{       
         display: block;
-        border-bottom-left-radius: 5px;
-        border-bottom-right-radius: 5px;
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
         
   }
   ul li ul{                   
         display: block;
         position: absolute;
-        background: black;    
+        background: #303030;    
         width: auto;
     
   }
@@ -73,9 +73,9 @@ nav{
 
    ul li a:hover{
         background: white;      
-        color: black;
-        border-bottom-left-radius: 5px;
-        border-bottom-right-radius: 5px;
+        color: #303030;
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
   }
   
 }
@@ -91,38 +91,109 @@ nav{
 
 #container{
   
+  background-repeat:no-repeat;
   position:static;
   width:100%;
-  background:{
-    color: #A9F5F2;
-  };
+  height:75%;
+  background:{color: #D8D589;  };
+  h1{
+    //-webkit-text-stroke: 2px black;
+    font:{
+      size:40px;
+    }
+    color: black;
+  }
   
   #izquierda{
+  
     
+    
+    width: 50%;
+    //background:{ color:red;}
+    float: left;
     #titulo{
+      margin-top: 100px;
       
     }
     
     #ayuda{
       #arriba{
-      
+        margin-left: 10px;
+        margin-bottom: 10%;
+        text-align: center;
       }
       #izqui{
-      
+        float:left;
+        margin-left: 25%;
+        p{
+          color: #337C11;
+        }
+        p:hover{
+          color:#47D620  ;
+        }
       }
       #dere{
-      
+        margin-left:10%;
+        float:left;
+        p{
+          color:#B90C0C;
+        }
+        p:hover{
+          color:#FF0000;
+        }
       }
     }
   }
   
   
   #derecha{
+    width: 50%;
+    //background:{color: blue;}
+    float:left;
     #tabla{
-      
+      margin-left: 10%;
+      margin-top: 100px;
+      table{
+        border: none;
+       // border-style: solid;
+       // border-color: #9D866C;
+      }
+      th{
+        color:black;
+        font:{
+          size:20px;
+        }
+        //-webkit-text-stroke: 1px black;
+        text-align:center;
+        background-color: #7C797C  ;
+      }
     }
     
     #final{
+      margin-left: 10%;
+      
+      button{
+        width: 150px;
+      }
+      button:hover{
+        background-color: #7C797C ;
+        color: white;
+      }
+      #finaltable:hover{
+        
+        td{
+           background-color: #63C5AF  ;
+        }
+       
+      }
+      #result{
+        
+        border-color:black;
+        
+      }
+      tr.error{
+          background-color: #C71F1F  ; 
+        }
       
     }
   }
@@ -136,13 +207,15 @@ nav{
   
   position: static;
   background: {
-    color:white;
+  color:#9D866C;
   }
   width:100%;
-  height:200px;
+  height: 17.5%;
+  float: left;
   
   #desarrollo{
      p{
+      margin-top:1%;
       text-align:center;
       color: black;
       font:{
