Solucionando problemas rutas css y js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,13 +4,13 @@
   <head>
      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
      <title>CSV Analyzer</title>
-     <link href="./public/stylesheet/global.css" rel="stylesheet" type="text/css">
-     <link href="./public/stylesheet/main.css" rel="stylesheet" type="text/css">
+     <link href="/public/stylesheets/global.css" rel="stylesheet" type="text/css">
+     <link href="/public/stylesheets/main.css" rel="stylesheet" type="text/css">
      
      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-     <script type="text/javascript" src="./public/javascript/csv.js"></script>
-     <script type="text/javascript" src="./public/javascript/main.js"></script>
+     <script src="/public/javascripts/csv.js" type="text/javascript"></script>
+     <script src="/public/javascripts/main.js" type="text/javascript"></script>
 
   </head>
   
