Solucionados errores visualizacion tabla

--- a/views/test/index.ejs
+++ b/views/test/index.ejs
@@ -5,7 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" media="all" href="../test/mocha.css" />
-    <script src="../public/javascripts/main.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="mocha"></div>
@@ -18,7 +17,7 @@
     <script src="../test/sinon-1.17.2.js"></script>
     <script src="../test/blanket.js" data-cover-adapter="../test/mocha-blanket.js" data-cover-flags="debug"></script>
     
-    <script src="../public/javascripts/csv.js" data-cover></script>
+    <script src="../public/stylesheet/csv.js" data-cover></script>
 
     <script>mocha.setup('bdd');</script>
     <script src="../test/tests.js"></script>
