--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,10 +8,7 @@
      <link href="/stylesheets/main.css" rel="stylesheet" type="text/css">
      
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <!-- <script type="text/javascript" src="/javascripts/main.js"></script> -->
-   
-    
-     
+     <script type="text/javascript" src="/javascripts/main.js"></script>
   </head>
   
   <body>
