--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,9 +39,12 @@
       </table>
     </div>
     <div id="final">
-      <button type="button" onclick="crear();">Crear Tabla</button>
-      <button type="button" onclick="limpiar();">Limpiar Tabla</button><br><br>
-      <span class="output" id="finaltable"></span>
+      <form action="/table" method="post">
+        <button type="button" onclick="crear();">Crear Tabla</button>
+        <button type="button" onclick="limpiar();">Limpiar Tabla</button><br><br>
+        <span class="output" id="finaltable"></span>
+      </form>
+      
     </div>
     
   </div>
