--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -86,6 +86,11 @@ nav {
   #container #derecha {
     width: 50%;
     float: left; }
+    #container #derecha p {
+      color: black;
+      font-size: 20px;
+      text-align: center;
+      background-color: #7C797C; }
     #container #derecha #tabla {
       margin-left: 10%;
       margin-top: 100px; }
