--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -147,6 +147,15 @@ nav{
   
   
   #derecha{
+    p{
+      color:black;
+        font:{
+          size:20px;
+        }
+        //-webkit-text-stroke: 1px black;
+        text-align:center;
+        background-color: #7C797C  ;
+    }
     width: 50%;
     //background:{color: blue;}
     float:left;
