--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -95,7 +95,7 @@ nav{
   position:static;
   width:100%;
   height:70%;
-  background:{color: #D8D589;  };
+  background-color: #D8D589;
   h1{
     //-webkit-text-stroke: 2px black;
     font:{
