--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -52,7 +52,6 @@ nav {
   position: static; }
 
 #container {
-  background-repeat: no-repeat;
   position: static;
   width: 100%;
   height: 70%;
@@ -61,6 +60,8 @@ nav {
     font-size: 40px;
     color: black; }
   #container #izquierda {
+    height: 480px;
+    background-color: #D8D589;
     width: 50%;
     float: left; }
     #container #izquierda #titulo {
@@ -84,6 +85,9 @@ nav {
       #container #izquierda #ayuda #dere p:hover {
         color: #FF0000; }
   #container #derecha {
+    width: 50%;
+    height: 480px;
+    background-color: #D8D589;
     width: 50%;
     float: left; }
     #container #derecha p {
