--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -204,9 +204,9 @@ nav{
         border-color:black;
         
       }
-      tr.error{
+     /* tr.error{
           background-color: #C71F1F  ; 
-        }
+        }*/
       
     }
   }
