--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -3,6 +3,7 @@ html *
    font-size: large; 
    /* The !important ensures that nothing can override what you've set in this style (unless it is also important). */
    font-family: Arial;
+
 }
 
 h1            { text-align: center; font-size: x-large; }
@@ -18,7 +19,7 @@ input        { text-align: right;  border: none;       }     /* Align input to t
 textarea     { border: outset; border-color: white;       }               
 table        { border: inset; border-color: white; }
 table.center { margin-left:auto; margin-right:auto; }
-#result      { border-color: red; }
+#result      { border-color: red; margin-top: 25%; margin-left: 0px;}
 tr.error       { background-color: red; }
 body
 {
