--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -6,9 +6,9 @@
 
 //este es el cuerpo
 body {
-  height:100%;
+  height: 100%;
   background:{
-     color:white; 
+     color: white; 
   }
   font: {
     family: Arial, sans-serif;
@@ -93,8 +93,9 @@ nav{
   
   
   position:static;
-  width:100%;
-  height:70%;
+  width: 100%;
+  height: 70%;
+  min-height: 70%;
   background-color: #D8D589;
   h1{
     //-webkit-text-stroke: 2px black;
@@ -150,16 +151,7 @@ nav{
   #derecha{
     width:50%;
     height:480px;
-  background-color: #D8D589;
-    p{
-      color:black;
-        font:{
-          size:20px;
-        }
-        //-webkit-text-stroke: 1px black;
-        text-align:center;
-        background-color: #7C797C  ;
-    }
+    background-color: #D8D589;
     width: 50%;
     //background:{color: blue;}
     float:left;
@@ -180,24 +172,26 @@ nav{
         text-align:center;
         background-color: #7C797C  ;
       }
-    }
-    
-    #final{
-      margin-left: 10%;
-      
+      td{
+        background-color: #D8D589;
+      }
       button{
+        margin-top: -10px;
         width: 150px;
       }
       button:hover{
         background-color: #7C797C ;
         color: white;
       }
-      #finaltable:hover{
+    }
+    
+    #final{
+        #finaltable:hover{
         
         td{
            background-color: #63C5AF  ;
         }
-       
+      
       }
       #result{
         
