--- a/views/table.ejs
+++ b/views/table.ejs
@@ -1,9 +1,14 @@
-<table id="result" class="center">
-     <% items.forEach(function(name, index) { %>
-       <tr class="<%= name.rowClass %>">
-         <% name.value.forEach(function(cell,index) { %>
-           <td><%= cell %></td>
-         <% }); %>
-       </tr>
-     <% }); %>
-</table>
+<div id="container">
+  <div id="izquierda"></div>
+   <div id="derecha">
+        <table id="result" class="center">
+             <% items.forEach(function(name, index) { %>
+               <tr class="<%= name.rowClass %>">
+                 <% name.value.forEach(function(cell,index) { %>
+                   <td><%= cell %></td>
+                 <% }); %>
+               </tr>
+             <% }); %>
+        </table>
+    </div>
+</div>
